--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,12 @@ dependencies {
     implementation "com.google.android.material:material:$rootProject.materialVersion"
 
 
+
+
+    implementation "androidx.paging:paging-runtime-ktx:$paging_version" // For Kotlin use paging-runtime-ktx
+    // alternatively - without Android dependencies for testing
+    testImplementation "androidx.paging:paging-common-ktx:$paging_version" // For Kotlin use paging-common-ktx
+
+
+
 }
