--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         coreTestingVersion = '2.1.0'
         materialVersion = '1.1.0'
         coroutines = '1.3.4'
+        paging_version = "2.1.2"
     }
         repositories {
         google()
